[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Images/Others/Arrow.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "Sinuous"
length = 3.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("HANDLER:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, -100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, -100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, -100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0, -100, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HANDLER:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -50, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0, 150, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0, 350, -0.25, 0, 0.25, 0, 450, -0.25, 0, 0.25, 0, 550, -0.25, 0, 0.25, 0, 650, -0.25, 0, 0.25, 0, 750, -0.25, 0, 0.25, 0, 850, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6 )
}

[node name="Projectile" type="Node2D" groups=["ENEMY_PROJECTILE"]]
z_index = 1
script = ExtResource( 1 )

[node name="HANDLER" type="Node2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="HANDLER"]
scale = Vector2( 1.6, 1.6 )

[node name="Area2D" type="Area2D" parent="HANDLER"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HANDLER/Area2D"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="HANDLER"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 16, 16 )
color = Color( 1, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sinuous = SubResource( 2 )

[node name="Arrow" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
offset = Vector2( 40, 0 )

[node name="FROG_JUMPS" type="Timer" parent="."]
wait_time = 0.5

[connection signal="screen_exited" from="HANDLER/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="FROG_JUMPS" to="." method="_on_FROG_JUMPS_timeout"]
